--- a/about.html
+++ b/about.html
@@ -42,11 +42,73 @@
  	<main>
 
  		<h2>About</h2>
+ 		<br />
  		<p>Churchill House was built by the Winston Churchill Memorial Trust of Australia. The Trust began consideration of erecting a building of its own in 1967 and formed a building committee in 1968. In 1969 it acquired a lease for land on Northbourne Avenue, the current site, and engaged the architect Robin Boyd to design the building.</p>
+ 		<br />
 
- 		<p>Robin Boyd CBE HFRAIA (1919-1971) is a noted Australian architect. Boyd was a member of a prominent artistic family, and combined a career as an architect, author and critic (Clerehan 1993). He was strongly influenced by the Modern Movement, and deeply interested in the development of Australian architecture. Boyd is often remembered best for his domestic architecture, as well as his books, but he also produced designs for larger scale works, such as in the case of Churchill House. Boyd was awarded the Gold Medal by the RAIA in 1969, and made an honorary fellow in 1970.</p>
 
- 		<P>Boyd was strongly influenced later in his career by the post-war concrete architecture produced in Japan (Taylor 1990:80). This Brutalist style is evident in the design for Menzies College Student Housing (1968) and in the design for Churchill House. In this latter phase, Boyd was seeking larger scale projects, although with only limited success.</P>
+ 		<h2>Main Building</h2>
+ 		<br />
+
+ 		<p>The main building displays several different elevational treatments. The elevations facing onto the pool area feature floor to ceiling glass with minimal black metal frames to the lowest level, and precast vertical panels on the upper two storeys. Each panel has a projecting fin and are relatively narrow, with the overall affect being of closely spaced vertical fins. Beside the fins are narrow, slot windows providing minimal outlook onto the pool area.</p>
+
+ 		<br />
+ 		<p>The south and east elevations are quite different in character having long horizontal sections of flush-mounted glazing set in minimal black metal frames, with timber-textured off-form concrete spandrels between storeys. The base course of the elevation is a large section black-coated steel beam. Several window-mounted airconditioners are located on the south elevation. The blank end walls of the wings and the lift tower are off-form, timber-textured concrete with incised storey lines.</p>
+ 		<p>The building is an example of the Late Twentieth-Century Brutalist Style (1960-) with its large areas of blank wall and off-form concrete.</p>
+ 		<br />
+
+ 		<p>At the junction of the two wings are the foyers for each floor as well as the service core including the lift. Apart from the off-form concrete walls of the service elements, the foyers feature glazing set in black metal frames which extends the full height of the building. At the ground floor level the glazing is vertical but above that for the remaining two storeys it is sloping.</p>
+
+ 		<br />
+ 		<p>The building has concrete slab floors which are either carpeted or finished in slate. Some interior walls are textured, off-form concrete similar to the exterior. Other walls are lightweight partitions. There is a mixture of ceiling treatments: off-form concrete, suspended ceilings and set plasterboard. Many of the interior fitouts appear relatively modern and are not original.</p>
+
+ 		<br />
+ 		<p>The roof of the main building is set behind a parapet and appears to be graded concrete with a membrane coating.</p>
+
+ 		<br />
+ 		<h2>North Wing</h2>
+ 		<br />
+
+ 		<p>The north wing replaces an earlier pavilion on the same location. The current wing is a two storey structure with a flat metal deck roof set behind a parapet. The wing has an encircling steel colonnade which supports the roof and parapet. The walls are set back from the colonnade and feature flush-mounted glazing set in thin black metal frames, with textured off-form concrete spandrels, similar to the south wall of the south wing. There is an enclosed link between the north and east wings at the ground floor level.</p>
+ 		<br />
+
+ 		<h2>Pool Area, Carpark and Landscaping</h2>
+ 		<br />
+
+ 		<p>The pool area is lower than the surrounding site, and being mostly enclosed by the wings, has the quality of a sunken courtyard. The pool area is reached by a large flight of concrete steps from the west, and features a pond which borders a large, raised central island which is reached from one side by a set of bridging steps. The island has concrete paving, garden beds and silver birch trees, and is the location for a large fibreglass statue of Sir Winston Churchill.</p>
+ 		<br />
+
+ 		<p>The carpark is constructed in off-form concrete, with walls displaying the texture of the timber formwork.</p>
+
+ 		<br />
+
+ 		<p>Churchill House has a number of landscape/garden areas. At the front (west) of the building is an open lawn area and either side are mixed native/exotic plantings. The pool area contains numerous trees and shrubs, again of mixed native/exotic species. A small courtyard to the southeast of the main building features bamboo.</p>
+ 		<br />
+
+ 		<h2>Stylistic Analysis</h2>
+ 		<br />
+ 		<h3>Churchill House displays several key features of the Late Twentieth Century Brutalist style as follows.</h3>
+ 		<br />
+ 		<p>- Large areas of blank wall, especially the west wall of the south wing.</p>
+
+ 		<br />
+
+ 		<p>- Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.
+ 			In addition, it displays a number of the other features of this style.</p>
+ 		<br />
+ 		<p>- Sloping structural fins, being the structural steel members supporting the glazing at the corner between the east and south wings.</p>
+ 		<br />
+ 		<p>- Precast concrete non-loadbearing wall panels, being the cladding to the wings facing the pool area.</p>
+ 		<br />
+
+ 		<p>- Precast fins for sun protection, as above.</p>
+ 		<br />
+
+ 		<p>- Vertical slit windows, also being a part of the cladding to the wings facing the pool area.
+ 		</p>
+
+
+
 
 
  	</main>
