--- a/gallery.html
+++ b/gallery.html
@@ -5,58 +5,113 @@
 <head>
 
 
-	<!-- metacode -->
+    <!-- metacode -->
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-	<!-- title -->
-
-	<title>Churchill House| Gallery</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-	<!-- CSS -->
-	<link href="assets/css/reset.css" rel="stylesheet">
-	<link href="assets/css/styles.css" rel="stylesheet">
+
+    <!-- title -->
+
+    <title>Churchill House| Gallery</title>
+
+
+    <!-- CSS -->
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
+
+
 </head>
 
 <body>
-	<header>
-		<nav>
-			<ul>
+    <header>
 
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="history.html">History</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="robinboyd.html">Robin Boyd</a></li>
-			</ul>
-		</nav>
-		<hr>
+        <!-- top Nav -->
+        <nav>
+            <ul>
 
-		<h1><a href="index.html">Churchill House</a></h1>
-	</header>
-
-	<main>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="robinboyd.html">Robin Boyd</a></li>
+            </ul>
+        </nav>
 
 
+        <h1><a href="index.html">Churchill House</a></h1>
+    </header>
 
-
+    <main>
 
 
 
 
+        <!-- Gallery photos-->
+
+        <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)" width="200" height="200">
 
 
-	</main>
+        <p>Photo by <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
 
-	<footer>
 
-		<p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+        <img src="assets/images/churchill-house-48.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+        <p>Churchill House exterior, photo by Ben Ennis Butler </p>
 
-	</footer>
+
+        <img src="assets/images/churchill-house-14.jpg" alt="Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)" width="200" height="200">
+        <p>Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)</p>
+
+
+        <img src="assets/images/churchill-house-26.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+        <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+
+
+        <img src="assets/images/churchill-house-35.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+        <p>Churchill House exterior, photo by Ben Ennis Butler </p>
+
+        <img src="assets/images/churchill-house-46.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+        <p>Churchill House exterior, photo by Ben Ennis Butler </p>
+
+        <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+
+        <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+
+
+        <img src="assets/images/churchill-house-ext1.jpg" alt="extra1-churchill house by robin boyd photo copyright darren bradley" width="200" height="200">
+
+        <p>Photo by <a href="https://www.darrenbradleyphotography.com/">darren bradley</a></p>
+
+        <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969" width="200" height="200">
+
+        <p>Churchill House perspective sketch c.1969</p>
+
+        <img src="assets/images/churchill-house-19.jpg" alt="Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)" width="200" height="200">
+        <p>Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)</p>
+
+
+        <img src="assets/images/churchill-house-24.jpg" alt="Churchill House interior detail" width="200" height="200">
+
+        <p>Churchill House interior detail</p>
+
+        <img src="assets/images/churchill-house-38.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+
+        <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+
+
+
+
+
+
+
+    </main>
+
+    <footer>
+
+        <a href=" https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
+        <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+    </footer>
 
 
 </body>
