--- a/history.html
+++ b/history.html
@@ -5,62 +5,95 @@
 <head>
 
 
-	<!-- metacode -->
+    <!-- metacode -->
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-	<!-- title -->
-
-	<title>Churchill House| History</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-	<!-- CSS -->
-	<link href="assets/css/reset.css" rel="stylesheet">
-	<link href="assets/css/styles.css" rel="stylesheet">
+
+    <!-- title -->
+
+    <title>Churchill House| History</title>
+
+
+    <!-- CSS -->
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<nav>
-			<ul>
+    <header>
+        <nav>
+            <ul>
 
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="history.html">History</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="robinboyd.html">Robin Boyd</a></li>
-			</ul>
-		</nav>
-		<hr>
-
-		<h1><a href="index.html">Churchill House</a></h1>
-		<br />
-		<h2>History</h2>
-	</header>
-
-	<main>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="robinboyd.html">Robin Boyd</a></li>
+            </ul>
+        </nav>
 
 
+        <h1><a href="index.html">Churchill House</a></h1>
+        <br />
+        <h2>History</h2>
+    </header>
+    <br />
+    <main>
+        <p>Churchill House was built by the Winston Churchill Memorial Trust of Australia. The Trust began consideration of erecting a building of its own in 1967 and formed a building committee in 1968. In 1969 it acquired a lease for land on Northbourne Avenue, the current site, and engaged the architect Robin Boyd to design the building.</p>
+        <br />
+        <h3>The building was to provide offices for the Trust and in addition was to provide rental office accommodation for commercial tenants as a means of generating income for the Trust. Features of the original design included:</h3>
+
+        <br />
+
+        <p>- a glass exhibition pavilion, on the site of the current north wing, which housed a display on the work of the Trust;</p>
+        <br />
+
+        <p>- the flat roof area of the east and south wings which was intended to be a roof terrace; and</p>
+        <br />
+        <p>- accommodation in the building included a board room, dining room, reception area, bar and kitchen.</p>
+        <br />
+        <p>The cost of the works was about $1 million. The building was officially opened on 14 April 1972.</p>
+        <br />
+        <p>Boyd died in 1971 before completion, and W K Williams was engaged by the Trust as its site representative to replace Boyd.</p>
+        <br />
+        <p>Robin Boyd CBE HFRAIA (1919-1971) is a noted Australian architect. Boyd was a member of a prominent artistic family, and combined a career as an architect, author and critic (Clerehan 1993). He was strongly influenced by the Modern Movement, and deeply interested in the development of Australian architecture. Boyd is often remembered best for his domestic architecture, as well as his books, but he also produced designs for larger scale works, such as in the case of Churchill House. Boyd was awarded the Gold Medal by the RAIA in 1969, and made an honorary fellow in 1970.</p>
+        <br />
+        <p>Boyd was strongly influenced later in his career by the post-war concrete architecture produced in Japan (Taylor 1990:80). This Brutalist style is evident in the design for Menzies College Student Housing (1968) and in the design for Churchill House. In this latter phase, Boyd was seeking larger scale projects, although with only limited success.</p>
+        <br />
+
+        <p>During the 1990s(?) the glass pavilion was replaced by the current north wing.</p>
+        <br />
+        <h3>Churchill House is one of a number of Canberra buildings designed in the Late Twentieth Century Brutalist style. These include:</h3>
+        <br />
+        <p>- National Gallery of Australia, 1971;</p>
+        <br />
+        <p>- Cameron Offices, 1976;</p>
+        <br />
+        <p>- Canberra School of Music, 1976; and</p>
+        <br />
+        <p>- High Court of Australia, 1980.</p>
+        <br />
+        <p>Churchill House is an early example in this context, and one of only two examples of an office building. While Brutalism has been described as an ethic rather than an aesthetic (Banham 1966:10), both office buildings display a more restrained form compared to the other buildings, several of which were intended to portray a distinctive image in the national capital.</p>
+        <br />
+
+        <hr>
 
 
 
+    </main>
 
+    <footer>
 
+        <!-- Logo of Boyd's foundation website with link-->
 
+        <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
 
+        <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
 
-	</main>
-
-	<footer>
-
-		<p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
-
-	</footer>
-
-
+    </footer>
 </body>
 
 </html>
