--- a/index.html
+++ b/index.html
@@ -5,102 +5,166 @@
 <head>
 
 
-	<!-- metacode -->
+    <!-- metacode -->
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-	<!-- title -->
-
-	<title>Churchill House| Home Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-	<!-- CSS -->
-	<link href="assets/css/reset.css" rel="stylesheet">
-	<link href="assets/css/styles.css" rel="stylesheet">
+
+    <!-- title -->
+
+    <title>Churchill House| Home Page</title>
+
+
+    <!-- CSS -->
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<nav>
-			<ul>
+    <div class="wrapper">
+        <header>
+            <nav>
+                <ul>
 
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="history.html">History</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="robinboyd.html">Robin Boyd</a></li>
-			</ul>
-		</nav>
-		<hr>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="robinboyd.html">Robin Boyd</a></li>
+                </ul>
+            </nav>
 
-		<h1>Churchill House</h1>
-	</header>
+            <h1>Churchill House</h1>
 
-	<main>
+            <!-- TO DO: FINS IMAGE FOR HEADER BACKROUND -->
+        </header>
 
-
-
-		<img src="assets/images/churchill-house-ext1.jpg" alt="extra1-churchill house by robin boyd photo copyright darren bradley">
-
-		<p>Photo by <a href="https://www.darrenbradleyphotography.com/">darren bradley</a></p>
-
-
-
-
-		<br />
-		<br />
-		<h2>Introduction</h2>
-
-		<p>Churchill House, at 216 Northbourne Avenue in Braddon, was designed by <a href="robinboyd.html">Robin Boyd</a> for the Winston Churchill Memorial Trust of Australia in 1969-70, and construction was completed in 1971. It was Boyd’s last major commission, and he died prior to its completion. It is one of a small number of larger designs produced by Boyd and was Canberra’s first brutalist building. </p>
-
-		<br />
-
-		<p>Several components make up the complex. The main building, with east and south wings; the separate north wing or pavilion; the central pool and a rear carpark. The main building forms an L shape and with the north wing it encloses a courtyard with a large ornamental pool. The main building is three storeys high with a four storey lift tower at the southeast corner. The north wing and the carpark are two storeyed.</p>
-		<br />
-
-		<p>Although it has undergone some alterations over the years, the building still displays key features of the brutalist style with its large areas of blank wall and use off-form concrete, sloping structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia and High Court of Australia.
-		</p>
-
-		<br />
-
-
-		<h2>Statement of Signifigance</h2>
-
-		<br />
-
-		<p>Churchill House is a good example of the Late Twentieth Century Brutalist style, (1960-), displaying several key features as follows:
-
-			- Large areas of blank wall, especially the west wall of the south wing.
-			- Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.
-
-			In addition, it displays a number of the other features of this style including: sloping structural fins, precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House is one of several Canberra examples of this style, and one of only two which display a restrained form reflecting, perhaps, a more conservative approach to the style because of the intended office use.
-
-			The architecture of this building may contribute to the education of designers in their understanding of Late Twentieth-Century Architectural Styles.
-
-			Churchill House has interest for its association with the prominent architect, Robin Boyd. The building was his last major commission.
-		</p>
-		<br />
+        <main>
 
 
 
 
 
+            <!-- Image 1 -->
+
+            <div class="a-w"> <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969" width=800>
+            </div>
+
+            <div class="pic-p-a">
+
+                <a href="about.html">About</a>
 
 
 
 
-	</main>
-
-	<footer>
-
-		<p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
-
-	</footer>
+                <p>Churchill House perspective sketch c.1969</p>
 
 
+
+
+            </div>
+
+
+
+
+            <!-- Image 2 -->
+
+            <div class="b-w">
+                <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width=800>
+            </div>
+            <div class="pic-p-b">
+                <a href="history.html">History</a>
+                <p>Churchill House exterior (photo Ben Ennis Butler)</p>
+
+            </div>
+
+
+
+
+            <!-- Image 3 -->
+
+            <div class="c-w">
+                <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)" width=800>
+            </div>
+            <div class="pic-p-c">
+                <a href="gallery.html">Gallery</a>
+                <p>Photo by <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+            <div class="intro">
+                <h2>Introduction</h2>
+            </div>
+
+            <div class="text-intro">
+                <p>Churchill House, at 216 Northbourne Avenue in Braddon, was designed by <a href="robinboyd.html">Robin Boyd</a> for the Winston Churchill Memorial Trust of Australia in 1969-70, and construction was completed in 1971. It was Boyd’s last major commission, and he died prior to its completion. It is one of a small number of larger designs produced by Boyd and was Canberra’s first brutalist building. </p>
+
+                <br />
+
+                <p>Several components make up the complex. The main building, with east and south wings; the separate north wing or pavilion; the central pool and a rear carpark. The main building forms an L shape and with the north wing it encloses a courtyard with a large ornamental pool. The main building is three storeys high with a four storey lift tower at the southeast corner. The north wing and the carpark are two storeyed.</p>
+                <br />
+
+                <p>Although it has undergone some alterations over the years, the building still displays key features of the brutalist style with its large areas of blank wall and use off-form concrete, sloping structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia and High Court of Australia.
+                </p>
+
+                <br />
+
+
+
+                <h2>Statement of Signifigance</h2>
+
+                <br />
+
+                <p>Churchill House is a good example of the Late Twentieth Century Brutalist style, (1960-), displaying several key features as follows:
+
+                    - Large areas of blank wall, especially the west wall of the south wing.
+                    - Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.
+
+                    In addition, it displays a number of the other features of this style including: sloping structural fins, precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House is one of several Canberra examples of this style, and one of only two which display a restrained form reflecting, perhaps, a more conservative approach to the style because of the intended office use.
+
+                    The architecture of this building may contribute to the education of designers in their understanding of Late Twentieth-Century Architectural Styles.
+
+                    Churchill House has interest for its association with the prominent architect, Robin Boyd. The building was his last major commission.
+                </p>
+
+
+            </div>
+
+
+
+
+
+
+
+
+        </main>
+
+        <footer>
+
+
+            <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
+
+            <div class="made-at">
+                <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+
+            </div>
+
+
+        </footer>
+
+    </div>
 </body>
+
 
 </html>
