--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -74,6 +75,7 @@
             <div class="b-w">
                 <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width=800>
             </div>
+
             <div class="pic-p-b">
                 <a href="history.html">History</a>
                 <p>Churchill House exterior (photo Ben Ennis Butler)</p>
@@ -86,7 +88,7 @@
             <!-- Image 3 -->
 
             <div class="c-w">
-                <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)" width=800>
+                <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
             </div>
             <div class="pic-p-c">
                 <a href="gallery.html">Gallery</a>
