--- a/about.html
+++ b/about.html
@@ -18,13 +18,12 @@
      <!-- CSS -->
      <link href="assets/css/reset.css" rel="stylesheet">
      <link href="assets/css/styles.css" rel="stylesheet">
-
+     <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
  </head>
-
 
  <body>
      <header>
-
+         <h1>Churchill House</h1>
          <nav>
              <ul>
                  <li><a href="index.html">Home</a></li>
@@ -37,7 +36,7 @@
 
          </nav>
 
-         <h1><a href="index.html">Churchill House</a></h1>
+
      </header>
      <main>
 
@@ -129,7 +128,7 @@
 
 
          <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
-         <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+         <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
 
 
 
