--- a/gallery.html
+++ b/gallery.html
@@ -20,14 +20,15 @@
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
-
+    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
     <header>
 
         <!-- top Nav -->
+
+        <h1>Churchill House</h1>
         <nav>
             <ul>
 
@@ -40,7 +41,6 @@
         </nav>
 
 
-        <h1><a href="index.html">Churchill House</a></h1>
     </header>
 
     <main>
@@ -95,7 +95,7 @@
 
         <p>Churchill House interior detail</p>
 
-        <img src="assets/images/churchill-house-38.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+        <img src="assets/images/churchill-house-38.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
 
         <p>Churchill House exterior, photo by Ben Ennis Butler</p>
 
@@ -107,11 +107,16 @@
 
     </main>
 
+
     <footer>
 
-        <a href=" https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
-        <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+        <div class="logo"> <a href=" https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
+
+            <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
+
+        </div>
     </footer>
+
 
 
 </body>
