--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- metacode -->
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 
@@ -24,8 +24,11 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
+
+    <header>
+        <div class="res-nav">
+
+            <h1>Churchill House</h1>
             <nav>
                 <ul>
 
@@ -36,67 +39,61 @@
                     <li><a href="robinboyd.html">Robin Boyd</a></li>
                 </ul>
             </nav>
-
-            <h1>Churchill House</h1>
-
-            <!-- TO DO: FINS IMAGE FOR HEADER BACKROUND -->
-        </header>
-
-        <main>
+        </div>
 
 
 
+    </header>
+
+    <main>
 
 
-            <!-- Image 1 -->
 
-            <div class="a-w"> <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969" width=800>
+
+
+        <!-- Image 1 -->
+
+        <div class="main-content">
+
+            <div class="image-one">
+
+                <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969">
             </div>
 
-            <div class="pic-p-a">
-
-                <a href="about.html">About</a>
-
-
-
+            <div class="image-one-text">
 
                 <p>Churchill House perspective sketch c.1969</p>
 
 
-
-
             </div>
+
+
 
 
 
 
             <!-- Image 2 -->
 
-            <div class="b-w">
-                <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width=800>
-            </div>
 
-            <div class="pic-p-b">
-                <a href="history.html">History</a>
+            <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width=800>
+
+
+
+            <div class="image-two-text">
                 <p>Churchill House exterior (photo Ben Ennis Butler)</p>
+            </div> <!-- Image 3 -->
 
+
+
+
+
+
+            <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
+
+
+            <div class="image-thr-text">
+                <p>Robin-Boyd, Photo by: <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
             </div>
-
-
-
-
-            <!-- Image 3 -->
-
-            <div class="c-w">
-                <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
-            </div>
-            <div class="pic-p-c">
-                <a href="gallery.html">Gallery</a>
-                <p>Photo by <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
-
-            </div>
-
-
 
 
 
@@ -106,11 +103,11 @@
 
 
             <div class="intro">
-                <h2>Introduction</h2>
-            </div>
 
-            <div class="text-intro">
+                <h2>Introduction</h2>
+
                 <p>Churchill House, at 216 Northbourne Avenue in Braddon, was designed by <a href="robinboyd.html">Robin Boyd</a> for the Winston Churchill Memorial Trust of Australia in 1969-70, and construction was completed in 1971. It was Boyd’s last major commission, and he died prior to its completion. It is one of a small number of larger designs produced by Boyd and was Canberra’s first brutalist building. </p>
+
 
                 <br />
 
@@ -119,6 +116,7 @@
 
                 <p>Although it has undergone some alterations over the years, the building still displays key features of the brutalist style with its large areas of blank wall and use off-form concrete, sloping structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia and High Court of Australia.
                 </p>
+
 
                 <br />
 
@@ -130,42 +128,50 @@
 
                 <p>Churchill House is a good example of the Late Twentieth Century Brutalist style, (1960-), displaying several key features as follows:
 
+                    <br />
+                    <br />
+
                     - Large areas of blank wall, especially the west wall of the south wing.
                     - Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.
 
+                    <br />
+                    <br />
+
                     In addition, it displays a number of the other features of this style including: sloping structural fins, precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House is one of several Canberra examples of this style, and one of only two which display a restrained form reflecting, perhaps, a more conservative approach to the style because of the intended office use.
+                    <br />
+                    <br />
 
                     The architecture of this building may contribute to the education of designers in their understanding of Late Twentieth-Century Architectural Styles.
 
+                    <br /> <br />
                     Churchill House has interest for its association with the prominent architect, Robin Boyd. The building was his last major commission.
-                </p>
+
 
 
             </div>
+        </div>
 
 
 
 
 
 
+    </main>
+
+    <footer>
 
 
-        </main>
-
-        <footer>
+        <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
 
 
-            <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
 
-            <div class="made-at">
-                <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
-
-            </div>
+        <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
 
 
-        </footer>
 
-    </div>
+
+    </footer>
+
 </body>
 
 
