--- a/robinboyd.html
+++ b/robinboyd.html
@@ -19,10 +19,12 @@
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
     <header>
+        <h1>Churchill House</h1>
         <nav>
             <ul>
 
@@ -36,7 +38,7 @@
 
 
 
-        <h1><a href="index.html">Churchill House</a></h1>
+
         <br />
     </header>
 
@@ -117,7 +119,9 @@
         <br />
 
         <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
-        <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+
+        <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
+
     </footer>
 
 
