--- a/history.html
+++ b/history.html
@@ -20,10 +20,12 @@
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
     <header>
+        <h1>Churchill House</h1>
         <nav>
             <ul>
 
@@ -32,11 +34,14 @@
                 <li><a href="history.html">History</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="robinboyd.html">Robin Boyd</a></li>
+
             </ul>
+
+
         </nav>
 
 
-        <h1><a href="index.html">Churchill House</a></h1>
+
         <br />
         <h2>History</h2>
     </header>
@@ -91,7 +96,8 @@
 
         <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
 
-        <p>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</p>
+
+        <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
 
     </footer>
 </body>
