--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,8 @@
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -42,72 +43,112 @@
 
 
     </header>
-    <div class="main-content">
-
-        <main>
 
 
+    <main>
+
+        <div class="main-content">
 
 
             <!-- Gallery photos-->
 
-            <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)" width="200" height="200">
+            <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
+
+            <div class="image-one-text">
+
+                <p>Photo by <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
 
 
-            <p>Photo by <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
+            </div>
+
+            <img src="assets/images/churchill-house-14.jpg" alt="Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)">
 
 
-            <img src="assets/images/churchill-house-48.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
-            <p>Churchill House exterior, photo by Ben Ennis Butler </p>
+            <div class="image-one-text">
+
+                <p>Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)</p>
+
+            </div>
+
+            <img src="assets/images/churchill-house-26.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+
+            <div class="image-one-text">
+
+                <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+            </div>
 
 
-            <img src="assets/images/churchill-house-14.jpg" alt="Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)" width="200" height="200">
-            <p>Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)</p>
+            <img src="assets/images/churchill-house-35.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+
+            <div class="image-one-text">
+
+                <p>Churchill House exterior, photo by Ben Ennis Butler </p>
+            </div>
 
 
-            <img src="assets/images/churchill-house-26.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
-            <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+            <img src="assets/images/churchill-house-46.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+
+            <div class="image-one-text">
+
+                <p>Churchill House exterior, photo by Ben Ennis Butler </p>
+            </div>
+
+            <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+
+            <div class="image-one-text">
+
+                <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+            </div>
 
 
-            <img src="assets/images/churchill-house-35.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
-            <p>Churchill House exterior, photo by Ben Ennis Butler </p>
 
-            <img src="assets/images/churchill-house-46.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
-            <p>Churchill House exterior, photo by Ben Ennis Butler </p>
+            <img src="assets/images/churchill-house-ext1.jpg" alt="extra1-churchill house by robin boyd photo copyright darren bradley">
 
-            <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width="200" height="200">
+            <div class="image-one-text">
 
-            <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+                <p>Photo by <a href=" https://www.darrenbradleyphotography.com/">darren bradley</a> </p>
 
+            </div>
 
-            <img src="assets/images/churchill-house-ext1.jpg" alt="extra1-churchill house by robin boyd photo copyright darren bradley" width="200" height="200">
+            <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969">
 
-            <p>Photo by <a href="https://www.darrenbradleyphotography.com/">darren bradley</a></p>
+            <div class="image-one-text">
 
-            <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969" width="200" height="200">
-
-            <p>Churchill House perspective sketch c.1969</p>
-
-            <img src="assets/images/churchill-house-19.jpg" alt="Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)" width="200" height="200">
-            <p>Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)</p>
+                <p>Churchill House perspective sketch c.1969</p>
+            </div>
 
 
-            <img src="assets/images/churchill-house-24.jpg" alt="Churchill House interior detail" width="200" height="200">
+            <img src="assets/images/churchill-house-19.jpg" alt="Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)">
 
-            <p>Churchill House interior detail</p>
+            <div class="image-one-text">
+
+                <p>Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)</p>
+
+            </div>
+
+
+            <img src="assets/images/churchill-house-24.jpg" alt="Churchill House interior detail">
+
+            <div class="image-one-text">
+
+                <p>Churchill House interior detail</p>
+
+            </div>
 
             <img src="assets/images/churchill-house-38.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
 
-            <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+            <div class="image-one-text">
+
+                <p>Churchill House exterior, photo by Ben Ennis Butler</p>
+
+            </div>
 
 
+        </div>
 
 
+    </main>
 
-
-
-        </main>
-    </div>
 
 
     <footer>
