--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+
 </head>
 
 <body>
@@ -79,7 +81,7 @@
 
 
 
-            <div class="image-two-text">
+            <div class="image-one-text">
                 <p>Churchill House exterior (photo Ben Ennis Butler)</p>
             </div>
 
@@ -93,7 +95,7 @@
             <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
 
 
-            <div class="image-thr-text">
+            <div class="image-one-text">
                 <p>Robin-Boyd, Photo by: <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
             </div>
 
