--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="history.html">History</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="robinboyd.html">Robin Boyd</a></li>
+                    <li><a href="robinboyd.html">Boyd</a></li>
                 </ul>
             </nav>
         </div>
@@ -57,7 +57,7 @@
 
         <div class="main-content">
 
-            <div class="image-one">
+            <div class="imageWrapper">
 
                 <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969">
             </div>
@@ -71,13 +71,13 @@
 
 
 
-
-
-
             <!-- Image 2 -->
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            </div>
 
 
-            <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)" width=800>
+
 
 
 
@@ -90,9 +90,10 @@
 
             <!-- Image 3 -->
 
+            <div class="imageWrapper">
 
-
-            <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
+                <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
+            </div>
 
 
             <div class="image-one-text">
