before final   updatee

--- a/about.html
+++ b/about.html
@@ -4,17 +4,10 @@
 
  <head>
      <!-- metacode -->
-
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
      <!-- title -->
-
      <title>Churchill House</title>
-
-
      <!-- CSS -->
      <link href="assets/css/reset.css" rel="stylesheet">
      <link href="assets/css/styles.css" rel="stylesheet">
@@ -31,20 +24,14 @@
                  <li><a href="about.html">About</a></li>
                  <li><a href="history.html">History</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="robinboyd.html">Robin Boyd</a></li>
-
+                 <li><a href="robinboyd.html">Boyd</a></li>
              </ul>
-
          </nav>
-
-
      </header>
 
 
      <div class="wrapper">
-
          <main>
-
              <h2>About</h2>
              <br />
              <p>Churchill House was built by the Winston Churchill Memorial Trust of Australia. The Trust began consideration of erecting a building of its own in 1967 and formed a building committee in 1968. In 1969 it acquired a lease for land on Northbourne Avenue, the current site, and engaged the architect Robin Boyd to design the building.</p>
@@ -133,7 +120,7 @@
 
 
 
-         <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
+         <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo"> </a>
          <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
 
 
