--- a/gallery.html
+++ b/gallery.html
@@ -3,20 +3,11 @@
 <html lang="en">
 
 <head>
-
-
     <!-- metacode -->
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
     <!-- title -->
-
     <title>Churchill House| Gallery</title>
-
-
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
@@ -25,142 +16,132 @@
 </head>
 
 <body>
+
+    <!-- header section -->
     <header>
-
         <!-- top Nav -->
-
         <h1>Churchill House</h1>
         <nav>
             <ul>
-
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="robinboyd.html">Robin Boyd</a></li>
+                <li><a href="robinboyd.html">Boyd</a></li>
             </ul>
         </nav>
-
-
     </header>
 
-
+    <!-- content body -->
     <main>
-
         <div class="main-content">
-
-
             <!-- Gallery photos-->
-
-            <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
+            <div class="imageWrapper">
+                <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Photo by <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
-
-
             </div>
 
-            <img src="assets/images/churchill-house-14.jpg" alt="Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-14.jpg"
+                    alt="Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)">
+            </div>
 
 
             <div class="image-one-text">
-
                 <p>Open Systems House (former Churchill House) south wing. (ACT Heritage 2013)</p>
-
             </div>
 
-            <img src="assets/images/churchill-house-26.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-26.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House exterior, photo by Ben Ennis Butler</p>
             </div>
 
-
-            <img src="assets/images/churchill-house-35.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-35.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House exterior, photo by Ben Ennis Butler </p>
             </div>
 
-
-            <img src="assets/images/churchill-house-46.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-46.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House exterior, photo by Ben Ennis Butler </p>
             </div>
 
-            <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House exterior, photo by Ben Ennis Butler</p>
             </div>
 
-
-
-            <img src="assets/images/churchill-house-ext1.jpg" alt="extra1-churchill house by robin boyd photo copyright darren bradley">
+            <div>
+                <img src="assets/images/churchill-house-ext1.jpg"
+                    alt="extra1-churchill house by robin boyd photo copyright darren bradley">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Photo by <a href=" https://www.darrenbradleyphotography.com/">darren bradley</a> </p>
-
             </div>
 
-            <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House perspective sketch c.1969</p>
             </div>
 
-
-            <img src="assets/images/churchill-house-19.jpg" alt="Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-19.jpg"
+                    alt="Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Boyd’s original drawings of Churchill House – first floor plan (courtesy of Ann Cleary)</p>
-
             </div>
 
-
-            <img src="assets/images/churchill-house-24.jpg" alt="Churchill House interior detail">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-24.jpg" alt="Churchill House interior detail">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House interior detail</p>
-
             </div>
 
-            <img src="assets/images/churchill-house-38.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            <div class="imageWrapper">
+                <img src="assets/images/churchill-house-38.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
+            </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House exterior, photo by Ben Ennis Butler</p>
-
             </div>
-
 
         </div>
-
-
     </main>
 
-
-
+    <!-- footer -->
     <footer>
 
-        <div class="logo"> <a href=" https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
+        <div class="logo"> <a href=" https://robinboyd.org.au/" target="_blank"> <img
+                    src="assets/images/boyd-logo-small.png" alt="boyd foundation logo"> </a>
 
-            <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
+            <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.
+            </h3>
 
         </div>
     </footer>
-
-
 
 </body>
 
