--- a/history.html
+++ b/history.html
@@ -3,20 +3,11 @@
 <html lang="en">
 
 <head>
-
-
     <!-- metacode -->
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
     <!-- title -->
-
     <title>Churchill House| History</title>
-
-
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
@@ -25,30 +16,23 @@
 </head>
 
 <body>
+
+    <!-- header section -->
     <header>
         <h1>Churchill House</h1>
         <nav>
             <ul>
-
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="robinboyd.html">Robin Boyd</a></li>
-
+                <li><a href="robinboyd.html">Boyd</a></li>
             </ul>
-
-
         </nav>
-
-
-
-        <br />
-
     </header>
-    <br />
-    <div class="wrapper">
 
+    <!-- content body -->
+    <div class="wrapper">
         <main>
             <h2>History</h2>
 
@@ -89,20 +73,16 @@
             <p>Churchill House is an early example in this context, and one of only two examples of an office building. While Brutalism has been described as an ethic rather than an aesthetic (Banham 1966:10), both office buildings display a more restrained form compared to the other buildings, several of which were intended to portray a distinctive image in the national capital.</p>
             <br />
 
-            <hr>
-
-
 
         </main>
     </div>
 
+    <!-- footer -->
     <footer>
 
         <!-- Logo of Boyd's foundation website with link-->
 
-        <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
-
-
+        <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo"> </a>
         <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
 
     </footer>
