--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
 
 <head>
 
-
     <!-- metacode -->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-
     <!-- title -->
 
     <title>Churchill House| Home Page</title>
-
 
     <!-- CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
@@ -27,13 +23,13 @@
 
 <body>
 
+    <!-- header section -->
     <header>
         <div class="res-nav">
 
             <h1>Churchill House</h1>
             <nav>
                 <ul>
-
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="history.html">History</a></li>
@@ -42,143 +38,95 @@
                 </ul>
             </nav>
         </div>
-
-
-
     </header>
 
+    <!-- content body -->
     <main>
-
-
-
-
-
         <!-- Image 1 -->
 
         <div class="main-content">
-
             <div class="imageWrapper">
-
                 <img src="assets/images/churchill-house-5.png" alt="Churchill House perspective sketch c.1969">
             </div>
 
             <div class="image-one-text">
-
                 <p>Churchill House perspective sketch c.1969</p>
-
-
             </div>
-
-
 
             <!-- Image 2 -->
             <div class="imageWrapper">
                 <img src="assets/images/churchill-house-47.jpg" alt="Churchill House exterior (photo Ben Ennis Butler)">
             </div>
 
-
-
-
-
-
             <div class="image-one-text">
                 <p>Churchill House exterior (photo Ben Ennis Butler)</p>
             </div>
 
-
-
-
             <!-- Image 3 -->
 
             <div class="imageWrapper">
-
                 <img src="assets/images/robin-boyd-portrait.jpg" alt="Robin Boyd (Photo by Mark Strizic)">
             </div>
-
 
             <div class="image-one-text">
                 <p>Robin-Boyd, Photo by: <a href="https://en.wikipedia.org/wiki/Mark_Strizic">Mark Strizic</a></p>
             </div>
 
-
-
-
-
             <!-- main content -->
 
             <div class="intro">
-
                 <h2>Introduction</h2>
+                <p>Churchill House, at 216 Northbourne Avenue in Braddon, was designed by <a href="robinboyd.html">Robin
+                        Boyd</a> for the Winston Churchill Memorial Trust of Australia in 1969-70, and construction was
+                    completed in 1971. It was Boyd’s last major commission, and he died prior to its completion. It is
+                    one of a small number of larger designs produced by Boyd and was Canberra’s first brutalist
+                    building. </p>
 
-                <p>Churchill House, at 216 Northbourne Avenue in Braddon, was designed by <a href="robinboyd.html">Robin Boyd</a> for the Winston Churchill Memorial Trust of Australia in 1969-70, and construction was completed in 1971. It was Boyd’s last major commission, and he died prior to its completion. It is one of a small number of larger designs produced by Boyd and was Canberra’s first brutalist building. </p>
+                <p>Several components make up the complex. The main building, with east and south wings; the separate
+                    north wing or pavilion; the central pool and a rear carpark. The main building forms an L shape and
+                    with the north wing it encloses a courtyard with a large ornamental pool. The main building is three
+                    storeys high with a four storey lift tower at the southeast corner. The north wing and the carpark
+                    are two storeyed.</p>
+
+                <p>Although it has undergone some alterations over the years, the building still displays key features
+                    of the brutalist style with its large areas of blank wall and use off-form concrete, sloping
+                    structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection,
+                    and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the
+                    major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia
+                    and High Court of Australia.
 
 
-                <br />
+                    <h2>Statement of Signifigance</h2>
 
-                <p>Several components make up the complex. The main building, with east and south wings; the separate north wing or pavilion; the central pool and a rear carpark. The main building forms an L shape and with the north wing it encloses a courtyard with a large ornamental pool. The main building is three storeys high with a four storey lift tower at the southeast corner. The north wing and the carpark are two storeyed.</p>
-                <br />
-
-                <p>Although it has undergone some alterations over the years, the building still displays key features of the brutalist style with its large areas of blank wall and use off-form concrete, sloping structural fins and precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House displays a fairly restrained form in comparison with the major Canberra buildings that followed in this style: Cameron Offices, National Gallery of Australia and High Court of Australia.
-                </p>
-
-
-                <br />
-
-
-
-                <h2>Statement of Signifigance</h2>
-
-                <br />
-
-                <p>Churchill House is a good example of the Late Twentieth Century Brutalist style, (1960-), displaying several key features as follows:
-
-                    <br />
-                    <br />
-
-                    - Large areas of blank wall, especially the west wall of the south wing.
-                    - Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east wings.
-
-                    <br />
-                    <br />
-
-                    In addition, it displays a number of the other features of this style including: sloping structural fins, precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical slit windows. Churchill House is one of several Canberra examples of this style, and one of only two which display a restrained form reflecting, perhaps, a more conservative approach to the style because of the intended office use.
-                    <br />
-                    <br />
-
-                    The architecture of this building may contribute to the education of designers in their understanding of Late Twentieth-Century Architectural Styles.
-
-                    <br /> <br />
-                    Churchill House has interest for its association with the prominent architect, Robin Boyd. The building was his last major commission.
+                    <p>Churchill House is a good example of the Late Twentieth Century Brutalist style, (1960-), displaying
+                        several key features as follows:
 
 
 
+                        - Large areas of blank wall, especially the west wall of the south wing.
+                        - Off-form concrete, such as the west wall of the south wing and the spandrels to the south and east
+                        wings.
+
+
+                        In addition, it displays a number of the other features of this style including: sloping structural
+                        fins, precast concrete non-loadbearing wall panels, precast fins for sun protection, and vertical
+                        slit windows. Churchill House is one of several Canberra examples of this style, and one of only two
+                        which display a restrained form reflecting, perhaps, a more conservative approach to the style
+                        because of the intended office use.
+
+                        The architecture of this building may contribute to the education of designers in their
+                        understanding of Late Twentieth-Century Architectural Styles.
+
+                        Churchill House has interest for its association with the prominent architect, Robin Boyd. The
+                        building was his last major commission.
             </div>
         </div>
-
-
-
-
-
-
     </main>
 
-
-
-
     <!-- footer -->
-
     <footer>
-
-
-        <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo" width="100"> </a>
-
-
-
+        <a href="https://robinboyd.org.au/" target="_blank"> <img src="assets/images/boyd-logo-small.png" alt="boyd foundation logo"> </a>
         <h3>This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2019.</h3>
-
-
-
-
     </footer>
 
 </body>
